--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Permanent+Marker&display=swap" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-  <title>React App</title>
+  <title>Alan Gaudet Portfolio</title>
 </head>
 
 <body class="container">
